--- a/sqlActivity/templates/index.html
+++ b/sqlActivity/templates/index.html
@@ -5,6 +5,14 @@
 </head>
 <body>
     <h1>F1 Drivers</h1>
+
+    <h2>Add a New Driver</h2>
+    <form action="/add" method="POST">
+        <input type="text" name="name" placeholder="Driver Name" required>
+        <input type="text" name="team" placeholder="Team Name" required>
+        <button type="submit">Add Driver</button>
+    </form>
+
     <ul>
         {% for driver in drivers %}
             <li>{{ driver.name }} ({{ driver.team }})</li>
